--- a/Ecommerce_Website_Project/Ecommerce_Website_Application/templates/about.html
+++ b/Ecommerce_Website_Project/Ecommerce_Website_Application/templates/about.html
@@ -13,7 +13,7 @@
     </div>
     <div class="about-card">
         <img src="{% static '/Partners/neel.png' %}" alt="Image" width="250">
-        <h1> Nell Patel</h1>
+        <h1> Neel Patel</h1>
         <h2>Role : Frontend </h2>
         <hr>
         <a href="https://github.com/neel1308"><button type="button" name="link2" class="github">View on Github</button></a>
